Fix dataset search template to match with others, unify element alignment

--- a/shared/scss/components/ckan/content.scss
+++ b/shared/scss/components/ckan/content.scss
@@ -4,7 +4,7 @@
     margin-bottom: $margin-large-vertical;
 
     .module {
-      margin: $margin-large-vertical 0;
+      margin: 0;
 
       .module-content {
         &.main-content {
@@ -37,6 +37,7 @@
         color: $text-color;
         font-weight: $headings-font-weight;
         font-family: $font;
+        padding: 0;
       }
 
       .module-content {
@@ -54,7 +55,7 @@
     }
 
     .filters {
-      padding: $padding-large-vertical 0;
+      padding: 0;
 
       .module {
         padding: $padding-large-vertical 0;
